--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
-        android:name="com.czq.pets.app.application.BaseApplication"
+        android:name="com.czq.pets.app.application.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/arms_logo"
         android:label="@string/app_name"
